<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#D3D3D3"
    tools:context="com.example.david.contactapp.controller.ContactActivity">

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="16dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/avatar" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageViewAvatar"
        android:layout_marginTop="54dp"
        android:paddingEnd="0dp"
        android:paddingStart="17dp"
        android:paddingTop="7dp"
        android:text="@string/name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextName"
        android:layout_marginTop="26dp"
        android:paddingEnd="0dp"
        android:paddingStart="17dp"
        android:paddingTop="7dp"
        android:text="@string/email"
        android:textSize="20sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="26dp"
        android:paddingEnd="0dp"
        android:paddingStart="17dp"
        android:paddingTop="7dp"
        android:text="@string/phone"
        android:textSize="20sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignTop="@+id/textViewName"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/textViewName"
        android:ellipsize="end"
        android:hint="@string/name_hint"
        android:maxLength="20"
        android:maxLines="1"
        android:id="@+id/editTextName" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/editTextName"
        android:layout_alignTop="@+id/textViewEmail"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:maxLength="20"
        android:maxLines="1" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_alignTop="@+id/textViewPhone"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:maxLength="20"
        android:maxLines="1" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageViewAvatar"
        android:layout_marginBottom="22dp"
        android:text="@string/save" />

</RelativeLayout>
